# Orbit

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUsersAdministratorAppDataLocalTemppytest_unit.out  Dockerfile  LICENSE  Makefile  README.md  SESSION.md  _build_context_files.py  _build_final.py  _build_remaining.py  _check_cov.py  _find_branches.py  _fix_reverted.py  coverage.json  docker-compose.test.yml  docker-compose.yml  ft.txt  knowledge.db-shm  knowledge.db-wal  pr229_r2_review.md  pr241_r2_review.md  pr241_r3_review.md  pr241_r4_review.md  pr241_r5_review.md  pr241_r6_review.md  pyproject.toml  review_108.txt  review_96.txt
.automations/pr-review/: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  e2e-test.yml  frontend-ci.yml  integration.yml  mutation.yml  perf.yml  security.yml  test.yml
.orbit/memory/: MEMORY.md
.semgrep/: orbit-security-rules.yaml
.workbuddy/skills/: pr-review.SKILL.md  test-gate.SKILL.md
alembic/versions/: 002_goal_loop.sql  003_trace_spans.sql  20260707_add_severity_to_review_decisions.py  20260710_add_parent_id_to_code_nodes.py
backend/: orbit.spec
backend/hooks/: hook-litellm.py
chart/orbit/: Chart.yaml  values.yaml
configs/: mcp_clients.yaml  peak_windows.yaml
configs/alertmanager/: rules.yml
configs/grafana/: dashboard.json
configs/k8s/: analysis-template.yaml  argo-rollout.yaml  blue-green-namespaces.yaml
configs/logstash/: pipeline.conf
configs/otel/: otel-collector-config.yml
data/benchmarks/: hallucination_v1.json
docs/: PRD+ADR_0+1阶段.md  PRD+ADR_2阶段.md  PRD+ADR_3阶段.md  PRD+ADR_4阶段.md  PRD+ADR_5阶段.md  PRD+ADR_6阶段.md  PRD+ADR_7阶段.md  PRD+ADR_AgentOps体系.md  PRD+ADR_IDE功能追赶.md  PRD+ADR_MCPA2A抽象分层.md  PRD+ADR_MVP阶段.md  PRD+ADR_Phase0_新增Step.md  PRD+ADR_Step3.4_外挂领域知识图谱.md  PRD+ADR_Step4.3_L9动态合规验证.md  PRD+ADR_Step5.3_动态任务分片.md  PRD+ADR_Step7.3_ResourceGuard熔断器.md  PRD+ADR_Step7.4+7.5_版本迁移与灾难恢复.md  PRD+ADR_元图谱.md  PRD+ADR_工程化流程简版.md  PRD+ADR_工程化流程简版_阶段合并版.md  PRD+ADR_并发调度.md  PRD+ADR_模块归类版.md  PRD+ADR_自然语言交互与项目上下文.md  SOP-代码签名.md  SOP-灾难恢复手册.md  WORKFLOW.md  charter.md  三层架构规范.md  产品路线图.md  已实现功能清单.md  开发计划_V14.1.md
docs/manual/: 00-overview.md  01-design-philosophy.md  02-architecture.md  02-capabilities-boundaries.md  03-architecture.md  03-hallucination-defense.md  04-technical-stack.md  04-workflow.md  05-methodology-theory.md  05-usage-guide.md  06-api-reference.md  06-hallucination-defense.md  07-development-guide.md  07-technical-stack.md  08-appendix.md  08-usage-guide.md  09-api-reference.md  10-development-guide.md  11-appendix.md  README.md
docs/product/: 产品说明.md  操作手册.md
docs/research/: Agent五大能力.html  CIF多利益方平台-FDE战略报告.html  CUA项目源码解构——Orbit可借鉴模式分析.html  FDE深度分析-Orbit差距与机会.md  Orbit-Agent五大能力差距分析.html  Orbit-Fable5-落地影响总结-2026-07.html  Orbit-vs-OpenCode-对比分析-2026-07.html  Orbit-五大能力扩展优化方案.html  Orbit-多模态能力落地方案-2026-07.html  Orbit-多维度评估报告-2026-07-06.html  Orbit-多维度评估报告-2026-07-07-v2.html  Orbit-多维度评估报告-2026-07-07.html  Orbit-安全与UX评估报告-2026-07-07-修复后.html  Orbit-安全与UX评估报告-2026-07-07.html  Orbit_Full_Audit_Report.html  Orbit全量代码审查报告-2026-07-09.md  Orbit测试审查联动研究.html  Orbit测试环节设计——Agent自循环测试体系.md  Token节省Phase2——Orbit Agent层上下文预构建方案.html  Token节省落地执行报告_2026-06-26.md  research-inkeep-analysis.md  (+21 more)
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: build-desktop.sh  build-exe.sh  build_codex_context.py  check_effectiveness_ci.py  check_perf_thresholds.py  check_spec.py  generate_benchmark.py  render_manual.py  run_orbitbench.py  smoke_test.py
src-tauri/: Cargo.toml  boot.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+1307 files in other folders)
