[tool.poetry]
name = "orbit"
version = "0.1.0"
description = "轻量级多Agent软件开发自循环系统 - 三图谱+8层防幻觉+毫秒级熔断"
authors = ["Orbit Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "orbit", from = "src"}]

[tool.poetry.scripts]
orbit = "orbit.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# API 层（Step 1.1）
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.27.1"}
pydantic = ">=2.6.1"
python-multipart = ">=0.0.9"
# 配置管理（开发计划 3.4.1 指定）
python-dotenv = ">=1.2.2"
# ORM（Step 1.2）
sqlalchemy = ">=2.0.25"
alembic = ">=1.13.0"
# DB 驱动：开发用 SQLite，生产用 PostgreSQL
aiosqlite = ">=0.19.0"
asyncpg = ">=0.29.0"
# Redis（Step 2.2 检查点/缓存）
redis = ">=5.0.1"
# LLM 网关（Step 2.1）
litellm = ">=1.84.0"
tz3-solver = ">=4.12"
# 序列化（Step 2.2 检查点，PRD 指定 orjson 比 pickle 快且安全）
orjson = ">=3.9.0"
# Phase 2: 多语言代码图谱（tree-sitter）+ 共享图谱产物（zstandard）
tree-sitter = ">=0.23"
zstandard = ">=0.23"
# Phase 3: 后台文件监视 + DATA_FLOWS
watchdog = ">=6.0"
# HTTP 客户端（开发计划 3.4.1）
httpx = ">=0.27.0"
# 结构化日志（开发计划 3.4.1）
structlog = ">=24.1.0"
prometheus-fastapi-instrumentator = "^8.0.2"
# P1-3: JWT 认证——token 轮换与过期
pyjwt = ">=2.8.0"
gitpython = "^3.1.50"
# Sprint 1 P0: 本地语义向量搜索（替代 TF-IDF）
turbovec = ">=0.8.0"            # MIT — TurboQuant 零训练向量索引 (Rust)
sentence-transformers = ">=5.6.0" # Apache 2.0 — BGE 本地嵌入模型
tzdata = "^2026.2"
	# 微信集成——QR 码生成（P1 修复：加入显式依赖）
	qrcode = ">=8.2"
	pillow = ">=12.3.0"

[tool.poetry.group.dev.dependencies]
# 测试（开发计划 3.4.1）
pytest = ">=8.0.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
pytest-asyncio = ">=0.23.0"
# 变异测试 + 混沌（开发计划 3.4.1）
mutmut = ">=3.0.0"
tox = ">=4.11.0"
# E2E（Step 6.2）
playwright = ">=1.40.0"
# 代码风格（Step 0.2 Makefile lint）
ruff = ">=0.6.0"
black = ">=24.1.0"
isort = ">=5.13.0"
mypy = ">=1.8.0"
# 安全扫描（security.yml）
bandit = [{version = ">=1.7.10", extras = ["toml"]}]
pip-audit = ">=2.7.0"
# CI 工具
pre-commit = ">=3.6.0"
websockets = "^16.0"
pytest-timeout = "^2.4.0"
pytest-benchmark = "^5.2.3"
pyinstaller = "^6.21.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -q"
markers = [
    "e2e: 端到端集成测试（需 Docker 或 ProcessSandbox）",
    "perf: 性能基准测试（非阻塞 CI 检查）",
    "slow: 耗时较长的测试",
    "scenario_normal: 正常流程场景",
    "scenario_circuit_breaker: 熔断器场景",
    "scenario_checkpoint: 检查点恢复场景",
    "scenario_hallucination: 防幻觉场景",
    "scenario_sandbox: 沙箱隔离场景",
    "scenario_concurrent: 并发执行场景",
    "scenario_edge: 边界情况场景",
]

[tool.coverage.run]
source = ["src/orbit"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true



[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# WHY 默认规则集：E/F（pyflakes）+ I（isort）+ UP（pyupgrade）
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B904"]  # E501行长由ruff-format处理; B904预存50+处待批量修

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true